--- a/FirstDemo/components/list-item/item.wxml
+++ b/FirstDemo/components/list-item/item.wxml
@@ -1,10 +1,11 @@
 <view class="source-item">
-    <navigator url="../../pages/detail/detail?id=123" hover-class="none" class="weui-media-box weui-media-box_appmsg" hover-class="none" wx:for="{{list}}" wx:key="index" wx:for-item="item">
-        <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+    <view class="weui-media-box weui-media-box_appmsg" wx:for="{{list}}" wx:key="index" wx:for-item="item">
+    <!-- <navigator url="../../pages/detail/detail?id=123" hover-class="none" class="weui-media-box weui-media-box_appmsg" hover-class="none" wx:for="{{list}}" wx:key="index" wx:for-item="item"> -->
+        <view class="weui-media-box__hd weui-media-box__hd_in-appmsg" bindtap="toDetail">
             <image class="weui-media-box__thumb" src="{{item.img_src}}"/>
         </view>
         <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-            <view class="weui-media-box__desc">{{item.title}}</view>
+            <view class="weui-media-box__desc" bindtap="backParams">{{item.title}}</view>
             <view class="weui-media-box__title">{{item.room}}室{{item.hall}}厅/{{item.area}}平/{{item.type}}/{{item.community_title}}</view>
             <view class="types">
                 <text class="types-text weui-green weui-bg-green">地铁</text>
@@ -17,5 +18,6 @@
                 <text class="unit-price">{{item.unit_price}}元/平</text>
             </view>
         </view>
-    </navigator>
+    <!-- </navigator> -->
+    </view>
 </view>
