--- a/FirstDemo/pages/detail/detail.wxml
+++ b/FirstDemo/pages/detail/detail.wxml
@@ -95,11 +95,10 @@
             </view>
         </view>
         <view class="map">
-            <map
-                    style="width: 100%; height: 400rpx;"
-                    latitude="{{latitude}}"
-                    longitude="{{longitude}}"
-                    markers="{{markers}}"
+            <map style="width: 100%; height: 400rpx;"
+                latitude="{{latitude}}"
+                longitude="{{longitude}}"
+                markers="{{markers}}"
             >
             </map>
         </view>
