--- a/FirstDemo/pages/list/list.wxml
+++ b/FirstDemo/pages/list/list.wxml
@@ -14,6 +14,6 @@
         </view>
     </view>
     <scroll-view scroll-y="true" style="height: {{scrollHeight}}" bindscrolltolower="scrollMore">
-        <list-item list="{{sourceList}}"></list-item>
+        <list-item list="{{sourceList}}" bindmyevent="getMsg"></list-item>
     </scroll-view>
 </view>
