--- a/FirstDemo/components/list-item/item.wxml
+++ b/FirstDemo/components/list-item/item.wxml
@@ -1,6 +1,6 @@
 <view class="source-item">
     <view class="weui-media-box weui-media-box_appmsg" wx:for="{{list}}" wx:key="index" wx:for-item="item">
-    <!-- <navigator url="../../pages/detail/detail?id=123" hover-class="none" class="weui-media-box weui-media-box_appmsg" hover-class="none" wx:for="{{list}}" wx:key="index" wx:for-item="item"> -->
+    <!-- <navigator url="../../pages/detail/detail?id=123" hover-class="none" class="weui-media-box weui-media-box_appmsg" wx:for="{{list}}" wx:key="index" wx:for-item="item"> -->
         <view class="weui-media-box__hd weui-media-box__hd_in-appmsg" bindtap="toDetail">
             <image class="weui-media-box__thumb" src="{{item.img_src}}"/>
         </view>
@@ -20,4 +20,5 @@
         </view>
     <!-- </navigator> -->
     </view>
+    <view wx:if="{{bottom}}" style="font-size: 28rpx;margin-bottom: 10rpx;text-align: center;">已经到底部了哦</view>
 </view>
