列表页&&登录

--- a/cakes/pages/index/index.wxss
+++ b/cakes/pages/index/index.wxss
@@ -1,5 +1,5 @@
 /**index.wxss**/
-.weui-search-bar {
+/* .weui-search-bar {
   background-color: transparent;
   padding: 16rpx 36rpx;
   border: 0;
@@ -24,7 +24,7 @@
 }
 .homm-flex .text {
     font-size: 24rpx;
-}
+} */
 
 
 swiper {
